[package]
name = "date_validation_types"
version = "1.0.0"
edition = "2021"
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"

[package.metadata."docs.rs"]
all-features = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
chrono = []

[dependencies]
chrono = { version = "0.4.26" }
once_cell = "1.18.0"
thiserror = "1.0.40"

derive_more = { version = "0.99.17", default-features = false, features = [
  "display",
  "from",
  "into",
] }
