[package]
name = "date_validation_types"
version = "2.0.0"
edition = "2021"
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
categories = ["date"]
keywords = ["date", "types", "validation"]

description = """
- Types for validating if a u32 value is valid for a  day, month or year.
- Type to for a valid date coming from simple integer value
"""

repository = "https://github.com/BoolPurist/date_validation_types"
documentation = "https://github.com/BoolPurist/date_validation_types"
homepage = "https://github.com/BoolPurist/date_validation_types"

[features]
chrono = []

[dependencies]
chrono = { version = "0.4.26" }
once_cell = "1.18.0"
thiserror = "1.0.40"

derive_more = { version = "0.99.17", default-features = false, features = [
  "display",
  "from",
  "into",
] }
